--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <a href="?post=${blog.id}" class="hover:underline text-blue-900">${blog.title}</a>
                 </h2>
                 <p class="text-gray-700 line-clamp-2 px-3 sm:px-0">${blog.description?.slice(0, 120) || blog.content.replace(/<[^>]+>/g, '').slice(0, 150)}…</p>
-                <a href="?post=${blog.id}" class="inline-block mt-2 text-blue-700 px-3 sm:px-0 rounded-full py-1 font-semibold text-xl hover:underline">Read more →</a>
+                <a href="?post=${blog.id}" class="inline-block mt-2 text-blue-800 px-3 sm:px-0 rounded-full py-1 font-semibold text-xl">Read more →</a>
             </article>
             `).join("") || "<p class='col-span-full text-center text-gray-500'>No blogs found in this category.</p>"}
         </div>
