--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <script>
         const categories = [
-            "All", "News", "Earning", "Business", "Tech", "Health", "Finance", "Crypto", "Education", "Jobs & Career", "Social Media", "Digital Marketing", "Self Improvement", "Motivation", "Fitness", "Weight Loss", "Food", "Recipes", "Travel", "Lifestyle", "Fashion", "Entertainment", "Movies", "Gaming", "Sports", "Parenting", "Home Decor", "Relationships", "AI", "Productivity", "Freelancing", "Blogging", "Reviews", "Apps", "Programming", "Cybersecurity"
+            "All", "News", "Earning", "Business", "Tech", "Health", "Finance", "Crypto", "Education", "Jobs & Career", "Social Media", "Digital Marketing", "Self Improvement", "Motivation", "Fitness","Food",  "Travel","Fashion", "Sports",  "AI",  "Freelancing", 
         ];
 
         const path = window.location.pathname;
