--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <script>
         const categories = [
-            "All", "News", "Earning", "Crypto", "Fitness","Food", "Sports",  "AI",  
+            "All", "News", "Earning", "Crypto", "Fitness","Food", "Sports",  "AI", "Health", "Finance"
         ];
 
         const path = window.location.pathname;
