--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <script>
         const categories = [
-            "All", "News", "Earning", "Crypto", "Fitness","Food", "Sports",  "AI", "Health", "Finance"
+            "All", "News", "Earning", "Business", "Tech", "Health", "Finance", "Crypto", "Education", "Jobs & Career", "Social Media", "Digital Marketing", "Self Improvement", "Motivation", "Fitness","Food",  "Travel","Fashion", "Sports",  "AI",  "Freelancing", 
         ];
 
         const path = window.location.pathname;
