added script of propellerAds

--- a/article.html
+++ b/article.html
@@ -26,6 +26,9 @@
     gtag('config', 'G-RWT6WMPL0R');
 </script>
 
+<!-- PropellerAds Ad Code -->
+<script src="https://fpyf8.com/88/tag.min.js" data-zone="153658" async data-cfasync="false"></script>
+
 <body class="bg-sky-50 text-gray-800">
     <div id="navbar-placeholder"></div>
 
