--- a/404.html
+++ b/404.html
@@ -23,6 +23,8 @@
     <title>Redirecting...</title>
 </head>
 
+<script src="https://fpyf8.com/88/tag.min.js" data-zone="153658" async data-cfasync="false"></script>
+
 <body>
     <p>Redirecting...</p>
 </body>
