--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
 
+<script src="https://fpyf8.com/88/tag.min.js" data-zone="153658" async data-cfasync="false"></script>
+
 <body class="bg-sky-50 text-gray-800">
     <!-- Navbar -->
     <script src="navbar.js"></script>
