--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <script src="navbar.js" defer></script>
 </head>
 
+<!-- PropellerAds Ad Code -->
+<script src="https://fpyf8.com/88/tag.min.js" data-zone="153658" async data-cfasync="false"></script>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWT6WMPL0R"></script>
 <script>
