--- a/signin.html
+++ b/signin.html
@@ -13,6 +13,9 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
+<!-- PropellerAds Ad Code -->
+<script src="https://fpyf8.com/88/tag.min.js" data-zone="153658" async data-cfasync="false"></script>
+
 <body class="bg-sky-50">
 
     <!-- Navbar placeholder -->
