add: PropellerAds Ad Code

--- a/404.html
+++ b/404.html
@@ -24,6 +24,8 @@
 </head>
 
 <body>
+    <!-- PropellerAds Ad Code -->
+    <script async="async" data-cfasync="false" src="https://ad.propellerads.com/YOUR-ZONE-ID.js"></script>
     <p>Redirecting...</p>
 </body>
 
