--- a/article.html
+++ b/article.html
@@ -27,6 +27,9 @@
 </script>
 
 <body class="bg-sky-50 text-gray-800">
+    <!-- PropellerAds Ad Code -->
+    <script async="async" data-cfasync="false" src="https://ad.propellerads.com/YOUR-ZONE-ID.js"></script>
+    
     <div id="navbar-placeholder"></div>
 
     <main class="max-w-3xl mx-auto px-4 sm:px-6 py-10" id="main-content">
