--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 </script>
 
 <body class="bg-sky-50 text-gray-800">
+    <!-- PropellerAds Ad Code -->
+    <script async="async" data-cfasync="false" src="https://ad.propellerads.com/YOUR-ZONE-ID.js"></script>
+    
     <div id="navbar-placeholder"></div>
 
     <script>
