--- a/privacy.html
+++ b/privacy.html
@@ -16,6 +16,9 @@
 </head>
 
 <body class="bg-sky-50 text-gray-800">
+    <!-- PropellerAds Ad Code -->
+    <script async="async" data-cfasync="false" src="https://ad.propellerads.com/YOUR-ZONE-ID.js"></script>
+    
     <!-- Navbar -->
     <script src="navbar.js"></script>
     <div id="navbar-placeholder"></div>
