--- a/search.html
+++ b/search.html
@@ -21,6 +21,9 @@
 </head>
 
 <body class="bg-sky-50 text-gray-800">
+    <!-- PropellerAds Ad Code -->
+    <script async="async" data-cfasync="false" src="https://ad.propellerads.com/YOUR-ZONE-ID.js"></script>
+    
     <div id="navbar-placeholder"></div>
 
     <main class="mx-auto py-6 px-2 sm:px-4">
