--- a/signin.html
+++ b/signin.html
@@ -14,6 +14,9 @@
 </head>
 
 <body class="bg-sky-50">
+    <!-- PropellerAds Ad Code -->
+    <script async="async" data-cfasync="false" src="https://ad.propellerads.com/YOUR-ZONE-ID.js"></script>
+    
 
     <!-- Navbar placeholder -->
     <div id="navbar-placeholder"></div>
