--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Learn more about BlogsHub - your go-to platform for tech, lifestyle, health, entertainment and thoughtful reads." />
+    <meta name="description"
+        content="Learn more about BlogsHub - your go-to platform for tech, lifestyle, health, entertainment and thoughtful reads." />
     <title>About Us | BlogsHub</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8833008865372719"
         crossorigin="anonymous"></script>
@@ -17,7 +18,7 @@
 <body class="bg-sky-50 text-gray-800">
     <!-- PropellerAds Ad Code -->
     <script async="async" data-cfasync="false" src="https://ad.propellerads.com/YOUR-ZONE-ID.js"></script>
-    
+
     <!-- Navbar -->
     <script src="navbar.js"></script>
     <div id="navbar-placeholder"></div>
