add new category `Science`

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <script>
         const categories = [
-            "All", "News", "Earning", "Crypto", "Fitness", "Food", "Sports", "AI", "Health", "Finance", "Analysis"
+            "All", "News", "Earning", "Crypto", "Fitness", "Food", "Sports", "AI", "Health", "Finance", "Analysis", "Science"
         ];
 
         const path = window.location.pathname;
