--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <script>
         const categories = [
-            "All", "News", "Technology", "Earning", "Crypto", "Fitness", "Food", "Sports", "AI", "Health", "Finance", "Analysis", "Science", "Business", "Entertainment", "Lifestyle", "Travel", "Education", "Gaming", "Environment", "Politics", "Culture", "History"
+            "All", "News", "Technology", "Earning","Fitness","Sports", "Health", "Finance", "Science", "Business", "Entertainment", "Lifestyle", "Travel", "Education", "Gaming", "Environment", "Politics", "Culture", "History"
         ];
 
         const path = window.location.pathname;
