Recovered files from commit 7d90a9c

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <script>
         const categories = [
-            "All", "News", "Technology", "Earning","Fitness","Sports", "Health", "Finance", "Science",  "Entertainment",
+            "All", "News", "Technology", "Earning","Fitness","Sports", "Health", "Finance", "Science",  "Entertainment", "Buisness"
         ];
 
         const path = window.location.pathname;
