--- a/404.html
+++ b/404.html
@@ -23,10 +23,7 @@
     <title>Redirecting...</title>
 </head>
 
-<body>
-    <!-- PropellerAds Ad Code -->
-    <script async="async" data-cfasync="false" src="https://ad.propellerads.com/YOUR-ZONE-ID.js"></script>
-    <p>Redirecting...</p>
+<body><p>Redirecting...</p>
 </body>
 
 </html>
