--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
 </script>
 
 <body class="bg-sky-50 text-gray-800">
-    <!-- PropellerAds Ad Code -->
-    <script async="async" data-cfasync="false" src="https://ad.propellerads.com/YOUR-ZONE-ID.js"></script>
-
     <div id="navbar-placeholder"></div>
 
     <script>
@@ -54,7 +51,7 @@
 
     <script>
         const categories = [
-            "All", "News", "Technology", "Earning","Fitness","Sports", "Health", "Finance", "Science",  "Entertainment", "Buisness","Education"
+            "All", "News", "Technology", "Earning","Fitness","Sports", "Health", "Finance", "Science",  "Entertainment", "Business","Education"
         ];
 
         const path = window.location.pathname;
