added new category

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <script>
         const categories = [
-            "All", "News", "Technology", "Earning","Fitness","Sports", "Health", "Finance", "Science",  "Entertainment", "Business","Education"
+            "All", "News", "Technology", "Earning", "Fitness", "Sports", "Health", "Finance", "Science", "Entertainment", "Business", "Education", "Social"
         ];
 
         const path = window.location.pathname;
